<resources>
    <string name="app_name">Vdocipher Sample App</string>
    <string name="action_settings">Settings</string>
    <string name="caption_search_dialog_title">Search in selected caption</string>
    <string name="vdocipher_sample_application">VdoCipher Sample Application</string>
    <string name="online_playback">Online Playback</string>
    <string name="play_with_custom_ui">Play with custom ui</string>
    <string name="play_with_inbuilt_ui">Play with inbuilt ui</string>
    <string name="play_with_water_mark">Play with water mark</string>
    <string name="play_with_out_water_mark">Play with without water mark</string>
    <string name="offline_playback">Offline Playback</string>
    <string name="stop_all">STOP ALL</string>
    <string name="resume_all">RESUME ALL</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="refresh">REFRESH</string>
    <string name="downloads">Downloads</string>
    <string name="download_all">Download All</string>
    <string name="start_playback">START PLAYBACK</string>
    <string name="start_playback_with_ui">START PLAYBACK WITH UI</string>
    <string name="play">Play</string>
    <string name="playlist">Playlist</string>
    <string name="media_queue">Media Queue</string>
</resources>
