<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/vdocipher_sample_application"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/progress_modal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvMain"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tvVersion"
        android:layout_below="@id/tvMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/online_playback"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/ic_baseline_play_circle_outline_60"
                android:onClick="onlinePlaybackWithUI"
                android:padding="10dp"
                android:text="@string/play_with_water_mark"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/ic_baseline_play_circle_outline_60"
                android:onClick="onlinePlaybackWithoutWaterMark"
                android:padding="10dp"
                android:text="@string/play_with_out_water_mark"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/ic_playlist_play_60"
                android:onClick="openPlaylistVideo"
                android:padding="10dp"
                android:text="Playlist Video"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/baseline_audiotrack_24"
                android:onClick="openPlaylistAudio"
                android:padding="10dp"
                android:text="Playlist Audio"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/offline_playback"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:onClick="showDownloads"
                android:padding="10dp"
                android:text="@string/downloads"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/library_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            tools:text="VdoCipher sdk version: a.b.c" />
    </LinearLayout>

</RelativeLayout>
